<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:background="@color/qianhui"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="2dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_user"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="60dp">

            <ImageView
                android:id="@+id/user_head"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ddhk_avatar" />
            <TextView
                android:id="@+id/user_name"
                android:text="@string/user_name"
                android:layout_toRightOf="@id/user_head"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/user_time"
                android:text="@string/user_time"
                android:layout_toRightOf="@id/user_head"
                android:layout_below="@id/user_name"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="1dp"
                android:textSize="12sp"
                android:textColor="@color/lightslategrey"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/user_praise"
                android:text="223"
                android:textSize="12sp"
                android:textColor="@color/lightslategray"
                android:drawableLeft="@drawable/no_zan"
                android:layout_marginEnd="20dp"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:gravity="center"

                android:layout_below="@+id/user_name"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_appraise"
            android:text="@string/praise"
            android:layout_below="@id/rl_user"
            android:layout_width="match_parent"
            android:textSize="12sp"
            android:padding="10dp"
            android:layout_height="wrap_content" />

        <GridView
            android:id="@+id/gv_appraise_img"
            android:layout_below="@id/tv_appraise"
            android:layout_width="match_parent"
            android:numColumns="6"
            android:visibility="gone"
            android:layout_height="wrap_content">

        </GridView>


        <!--回应用户-->
        <LinearLayout
            android:id="@+id/respond"
            android:layout_below="@id/gv_appraise_img"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>